# ObjectDetectionYolo11

./: CMakeLists.txt  README.md
src/: Tracker.cpp  Tracker.hpp  YOLO11.hpp  camera_inference.cpp  image_inference.cpp  main.cpp  video_inference.cpp
